--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     More about custom components can be found <a href="https://developers.google.com/web/fundamentals/web-components/">here</a>.    
     </p>
     <ico-counter id="counter" limit="10" on-limit-reached="logLimit"></ico-counter>
-    <script type="module" src="/ico-counter.js"></script>
+    <script type="module" src="./ico-counter.js"></script>
    
     <button id="reset">reset</button>
     new limit:<input type="text" id="limit"><button id="btnlimit">set limit</button>
